--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@stacks/transactions": "^6.9.0",
     "ai": "^2.2.13",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.13",
     "lucide-react": "^0.279.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "^13.5.3",
     "next-themes": "^0.2.1",
     "openai-edge": "^1.2.2",
