--- a/package.json
+++ b/package.json
@@ -37,17 +37,24 @@
     "shadcn-ui": "^0.4.0"
   },
   "devDependencies": {
+    "@hirosystems/stacks-devnet-js": "^2.3.1",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.7.2",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
     "@types/react-syntax-highlighter": "^15.5.7",
+    "@types/react-test-renderer": "^18.0.7",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.50.0",
     "eslint-config-next": "^13.5.3",
+    "jest": "^29.7.0",
     "postcss": "^8.4.31",
+    "react-test-renderer": "^18.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.2.2"
   }
 }
