--- a/package.json
+++ b/package.json
@@ -1,60 +1,64 @@
 {
-  "name": "ClarityCraft",
+  "name": "stacksapp",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@stacks/connect": "^7.4.0",
-    "@stacks/connect-react": "^22.2.0",
+    "@ethersproject/providers": "^5.7.2",
+    "@metamask/detect-provider": "^2.0.0",
     "@stacks/network": "^6.8.1",
     "@stacks/transactions": "^6.9.0",
-    "ai": "^2.2.13",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "framer-motion": "^11.0.13",
-    "lucide-react": "^0.279.0",
-    "mini-svg-data-uri": "^1.4.4",
-    "next": "^13.5.3",
-    "next-themes": "^0.2.1",
-    "openai-edge": "^1.2.2",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.59",
+    "@types/react": "^18.2.31",
+    "@types/react-dom": "^18.2.14",
+    "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
+    "ethers": "^6.8.0",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.6.4",
+    "fs": "^0.0.1-security",
+    "openai": "^4.12.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
-    "react-intersection-observer": "^9.5.2",
-    "react-markdown": "^8.0.7",
-    "react-syntax-highlighter": "^15.5.0",
-    "react-textarea-autosize": "^8.5.2",
-    "remark-gfm": "^3.0.1",
-    "remark-math": "^5.1.1",
-    "shadcn-ui": "^0.4.0"
+    "react-router-dom": "^6.17.0",
+    "react-scripts": "5.0.1",
+    "react-to-pdf": "^1.0.1",
+    "solc": "^0.8.4",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4",
+    "web3": "^4.2.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "@hirosystems/stacks-devnet-js": "^2.3.1",
-    "@testing-library/react-hooks": "^8.0.1",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.7.2",
-    "@types/react": "^18.2.23",
-    "@types/react-dom": "^18.2.8",
-    "@types/react-syntax-highlighter": "^15.5.7",
-    "@types/react-test-renderer": "^18.0.7",
+    "@types/web3": "^1.2.2",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.50.0",
-    "eslint-config-next": "^13.5.3",
-    "jest": "^29.7.0",
     "postcss": "^8.4.31",
-    "react-test-renderer": "^18.2.0",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "^3.3.3",
-    "tailwindcss-animate": "^1.0.7",
-    "ts-jest": "^29.1.2",
-    "typescript": "^5.2.2"
+    "tailwindcss": "^3.3.3"
   }
 }
