--- a/package.json
+++ b/package.json
@@ -7,26 +7,35 @@
     "@metamask/detect-provider": "^2.0.0",
     "@stacks/network": "^6.8.1",
     "@stacks/transactions": "^6.9.0",
+    "@tabler/icons-react": "^3.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/engine": "^3.3.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.3.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
     "axios": "^1.5.1",
+    "clsx": "^2.1.0",
     "dotenv": "^16.3.1",
     "ethers": "^6.8.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.4",
+    "framer-motion": "^11.0.20",
     "fs": "^0.0.1-security",
+    "mini-svg-data-uri": "^1.4.4",
     "openai": "^4.12.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-element-to-jsx-string": "^15.0.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-to-pdf": "^1.0.1",
     "solc": "^0.8.4",
+    "tailwind-merge": "^2.2.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "web3": "^4.2.0"
